Issue 2410: checkboxes wrap long text

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -38,6 +38,10 @@ html {
         user-select: none;
     }
 
+    textarea {
+        font-family: 'Open Sans', sans-serif;
+    }
+
     input,
     textarea,
     select,
